# opair-ai-sdlc

./: README.md  package-lock.json  package.json  vitest.config.ts
.github/agents/: adopt.agent.md  autopilot.agent.md  changelog.agent.md  context-pack.agent.md  doctor.agent.md  dora-export.agent.md  graph.agent.md  ki.agent.md  promote.agent.md  provenance-verify.agent.md  repair.agent.md  report.agent.md  sbom-check.agent.md  status.agent.md
.github/instructions/: cli-ai-sdlc.instructions.md  decisions.instructions.md  evaluation.instructions.md  execution.instructions.md  index-json.instructions.md  requirements.instructions.md  tests.instructions.md
.github/prompts/: attest-pack.prompt.md  audit.prompt.md  brainstorm.prompt.md  changelog.prompt.md  doctor.prompt.md  dora-export.prompt.md  ingest.prompt.md  ki.prompt.md  msrd.prompt.md  promote.prompt.md  provenance-verify.prompt.md  release-notes.prompt.md  report.prompt.md  threat-coverage.prompt.md  validate.prompt.md
.github/workflows/: cli-build.yml
cli/ai-sdlc/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
cli/ai-sdlc/templates/stacks/python-dlt-dbt/: README.md  pipeline.py  pyproject.toml
cli/ai-sdlc/templates/stacks/python-langgraph/: pyproject.toml
cli/ai-sdlc/templates/stacks/python-langgraph/src/__projectName__/: graph.py
cli/mcp-server/: package.json
docs/agent-logs/: 2026-05-04__R-0000__execution.md  2026-05-04__R-0000__release-prep.md
docs/agent-memory/: 08-progress-index.md  index.json
framework-dev/: README.md
scripts/: generate-capability-agents.mjs
(+314 files in other folders)
