[tool.poetry]
name = "__projectName__"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
dlt = "^1.0"

[tool.poetry.group.dev.dependencies]
dbt-core = "^1.8"
pytest = "^8.0"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
